Update Constitution;Outlines how the government works and other important things.html

--- a/Constitution;Outlines how the government works and other important things.html
+++ b/Constitution;Outlines how the government works and other important things.html
@@ -115,3 +115,9 @@
     This document may only be changed through a referendum(a vote that all citizens may partake in) with a 75%
     majority. Referendums require royal assent.
 </p>
+<h5>Minister of Mining</h5>
+<p>
+   The minister holds the power to mine UNDER the nation and towns as long as he/she has the concent from the king more that the minister will make money for the nation,
+    people can apply to be a miner they will be provided with maxed pickaxes whenever their old one breaks if the one breaks more than 7 times a week they will be fired this minister 
+    will take care of the nation financial problems
+</p>
